examples/test/testpolicy12728.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy12728
  namespace: namespace175
spec:
  podSelector:
    matchLabels:
      key13: value0
      key17: value25
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key45: value6
          key10: value20
      podSelector:
        matchLabels:
          key44: value0
          key10: value22
          key14: value49
